WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
165196
Some scroll snapping tests are still flaky
https://bugs.webkit.org/show_bug.cgi?id=165196
Summary
Some scroll snapping tests are still flaky
Wenson Hsieh
Reported
2016-11-30 08:02:41 PST
So far, this includes three tests: - tiled-drawing/scrolling/scroll-snap/scroll-snap-iframe.html - tiled-drawing/scrolling/scroll-snap/scroll-snap-mandatory-mainframe-slow-horizontal.html - tiled-drawing/scrolling/scroll-snap/scroll-snap-mandatory-mainframe-slow-vertical.html
Attachments
Patch
(4.15 MB, patch)
2016-11-30 10:13 PST
,
Wenson Hsieh
no flags
Details
Formatted Diff
Diff
Another attempt to observe flaky failures.
(4.15 MB, patch)
2016-11-30 16:49 PST
,
Wenson Hsieh
no flags
Details
Formatted Diff
Diff
Patch
(6.55 KB, patch)
2020-03-19 21:22 PDT
,
Simon Fraser (smfr)
wenson_hsieh
: review+
Details
Formatted Diff
Diff
Patch
(6.58 KB, patch)
2020-03-19 21:36 PDT
,
Simon Fraser (smfr)
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Wenson Hsieh
Comment 1
2016-11-30 10:13:03 PST
Created
attachment 295729
[details]
Patch
Wenson Hsieh
Comment 2
2016-11-30 16:49:42 PST
Created
attachment 295789
[details]
Another attempt to observe flaky failures.
Wenson Hsieh
Comment 3
2017-07-24 09:44:01 PDT
***
Bug 172148
has been marked as a duplicate of this bug. ***
Simon Fraser (smfr)
Comment 4
2020-03-19 18:46:19 PDT
scroll-snap-mandatory-mainframe-slow-vertical.html is still flakey. The scroll snap timer fires on the scrolling thread with the right offset, but the main thread hasn't caught up yet by the time we remove the "scroll snap" reason on the wheel event monitor.
Simon Fraser (smfr)
Comment 5
2020-03-19 21:22:00 PDT
Created
attachment 394064
[details]
Patch
Wenson Hsieh
Comment 6
2020-03-19 21:29:05 PDT
Comment on
attachment 394064
[details]
Patch r=me with the UNUSED_PARAM to fix the iOS build.
Simon Fraser (smfr)
Comment 7
2020-03-19 21:36:42 PDT
Created
attachment 394066
[details]
Patch
EWS
Comment 8
2020-03-19 23:03:39 PDT
Committed
r258753
: <
https://trac.webkit.org/changeset/258753
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 394066
[details]
.
Radar WebKit Bug Importer
Comment 9
2020-03-19 23:04:18 PDT
<
rdar://problem/60671382
>
Simon Fraser (smfr)
Comment 10
2020-03-20 09:23:58 PDT
***
Bug 209293
has been marked as a duplicate of this bug. ***
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug